Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -11532,10 +11532,9 @@ msgid "long_query_time is currently set to %ds."
 msgstr "long_query_time şimdilik %ds'ye ayarlı."
 
 #: po/advisory_rules.php:30
-#, fuzzy
 #| msgid "Show query box"
 msgid "Slow query logging"
-msgstr "Sorgu kutusunu göster"
+msgstr "Yavaş sorgu günlükleme"
 
 #: po/advisory_rules.php:31
 #, fuzzy
