Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -11650,10 +11650,9 @@ msgid "Available memory on this host: %s"
 msgstr ""
 
 #: po/advisory_rules.php:65
-#, fuzzy
 #| msgid "Query cache"
 msgid "Query cache disabled"
-msgstr "Sorgu önbelleği"
+msgstr "Sorgu önbelleği etkisizleştirildi"
 
 #: po/advisory_rules.php:66
 #, fuzzy
