Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 17:44+0200\n"
+"PO-Revision-Date: 2011-08-11 17:45+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11791,10 +11791,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:95
-#, fuzzy
 #| msgid "Query cache"
 msgid "Query cache max size"
-msgstr "Sorgu önbelleği"
+msgstr "Sorgu önbelleği en fazla boyutu"
 
 #: po/advisory_rules.php:96
 msgid ""
