Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -12054,10 +12054,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:155
-#, fuzzy
 #| msgid "Sort buffer size"
 msgid "MyISAM key buffer size"
-msgstr "Arabellek boyutunu sırala"
+msgstr "MyISAM anahtar arabellek boyutu"
 
 #: po/advisory_rules.php:156
 msgid "Key buffer is not initialized. No MyISAM indexes will be cached."
