Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:16+0200\n"
+"PO-Revision-Date: 2011-08-11 18:17+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1155,10 +1155,9 @@ msgid "Average load"
 msgstr "Povprečna obremenitev"
 
 #: js/messages.php:100
-#, fuzzy
 #| msgid "System memory"
 msgid "Total memory"
-msgstr "Sistemski pomnilnik"
+msgstr "Skupni pomnilnik"
 
 #: js/messages.php:101
 #, fuzzy
