Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -1175,10 +1175,9 @@ msgid "Free memory"
 msgstr "Prost pomnilnik"
 
 #: js/messages.php:104
-#, fuzzy
 #| msgid "System memory"
 msgid "Used memory"
-msgstr "Sistemski pomnilnik"
+msgstr "Uporabljen pomnilnik"
 
 #: js/messages.php:106
 #, fuzzy
